# appserv

./: .env  .gitignore  Cargo.toml  config.toml  userserv.db
src/: app_router.rs  app_state.rs  auth_user.rs  config.rs  errors.rs  jwt.rs  lib.rs  main.rs  proto.rs  util.rs
src/handler/: activate.rs  captcha.rs  is_signin.rs  mod.rs  send_email_code.rs  signin.rs  signout.rs  signup.rs  user_info.rs  user_products.rs
src/handler/hiqradio/: favorite_delete.rs  favorite_modify.rs  favorite_new.rs  favorites.rs  group_delete.rs  group_modify.rs  group_new.rs  groups.rs  mod.rs  recently.rs  recently_clear.rs  recently_modify.rs  recently_new.rs  sync.rs
src/handler/user/: activate.rs  is_login.rs  is_signin.rs  mod.rs  modify.rs  open_product.rs  products.rs  reset_passwd.rs  signin.rs  signout.rs  signup.rs  upload.rs  user_info.rs  user_products.rs
src/model/: mod.rs  product.rs  product_user.rs  session.rs  user.rs  user_product.rs
src/model/hiqradio/: fav_group.rs  favorite.rs  mod.rs  recently.rs  station_group.rs
src/proto/: hiqradio.rs  mod.rs  user.rs
src/repo/: mod.rs  mysql.rs  sqlite.rs
tables/: mysql.sql  sqlite.sql
