[package]
edition = "2021"
name = "userserv"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-session = "3.0.0"
async-trait = "0.1.74"
axum = {version = "0.6.20", features = ["headers", "tracing", "tower-log", "multipart", "macros"]}
axum-extra = "0.8.0"
captcha = "0.0.9"
chrono = {version = "0.4.31", features = ["serde"]}
data-encoding = "2.4.0"
lettre = {version = "0.11.1", default-features=false, features=["smtp-transport", "pool", "hostname", "builder", "rustls-tls"]}
nanoid = "0.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
regex = "1.10.2"
ring = "0.17.5"
serde = "1.0.190"
serde_json = "1.0.108"
sqlx = {version = "0.7.2", features = ["runtime-tokio", "tls-rustls", "mysql", "sqlite", "any", "macros", "chrono"]}
thiserror = "1.0.50"
tokio = {version = "1.0", features = ["full"]}
toml = "0.8.6"
tower = {version = "0.4", features = ["timeout"]}
tower-http = {version = "0.4.1", features = ["fs", "compression-br", "trace"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
urlencoding = "2.1.3"
