[package]
edition = "2021"
name = "appserv"
version = "0.1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true

[profile.dev]
panic = "abort"

[profile.bench]
debug = 1

[profile.minimal]
codegen-units = 1
inherits = "release"
lto = true
opt-level = "z"

[dependencies]
async-session = "3.0.0"
async-trait = "0.1.80"
axum = {version = "0.7.5", features = ["tracing", "tower-log", "multipart", "macros"]}
axum-extra = {version = "0.9.3", features = ["typed-header", "cookie"]}
base64 = "0.22.0"
captcha = "0.0.9"
chrono = {version = "0.4.38", features = ["serde"]}
data-encoding = "2.5.0"
lettre = {version = "0.11.6", default-features = false, features = ["smtp-transport", "pool", "hostname", "builder", "rustls-tls"]}
nanoid = "0.4.0"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.4"
ring = "0.17.8"
serde = "1.0.198"
serde_json = "1.0.116"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "tls-rustls", "mysql", "sqlite", "any", "macros", "chrono"]}
thiserror = "1.0.59"
tokio = {version = "1.37.0", features = ["full"]}
toml = "0.8.12"
tower = {version = "0.4.13", features = ["timeout"]}
tower-http = { version = "0.5.2", features = ["fs", "compression-br", "trace", "limit"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
urlencoding = "2.1.3"
